--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
@@ -45,11 +45,11 @@
         </button>
         <button [disabled]="loading" style="margin-right: 10px;" matTooltip="Data from previous batch & previous class"
             class="mat-raised-button" (click)="CopyFromPreviousClassAndBatch()">
-            <mat-icon>copy_all</mat-icon>
+            <mat-icon>arrow_back_ios</mat-icon>
         </button>
         <button [disabled]="loading" matTooltip="Data from previous batch & same class" class="mat-raised-button"
             (click)="CopyFromSameClassPreviousBatch()">
-            <mat-icon>content_copy</mat-icon>
+            <mat-icon>skip_previous</mat-icon>
         </button>
     </div>
     <mat-divider style="position:relative; margin-top:10px;margin-bottom: 15px;"></mat-divider>
