--- a/src/app/modules/globaladmininitial/plans/plans.component.scss
+++ b/src/app/modules/globaladmininitial/plans/plans.component.scss
@@ -10,6 +10,6 @@ mat-form-field{
 .mat-column-PlanId{
     flex:0 0 50px;
 }
-.mat-column-Active,.mat-column-PCPM,.mat-column-MinCount,.mat-column-MinPrice,.mat-column-Action{
-    flex:0 0 100px;
+.mat-column-Active,.mat-column-Sequence, .mat-column-PCPM,.mat-column-MinCount,.mat-column-MinPrice,.mat-column-Action{
+    flex:0 0 60px;
 }
