--- a/src/app/modules/Accounting/accountnature/accountnature.component.html
+++ b/src/app/modules/Accounting/accountnature/accountnature.component.html
@@ -82,9 +82,16 @@
             </button>
         </mat-header-cell>
         <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-            <button [disabled]="loading || Permission=='read' || !element.Action" matTooltip="save" mat-raised-button
+            <button style="margin-right:15px" [disabled]="loading || Permission=='read' || !element.Action" matTooltip="save" mat-raised-button
                 color="accent" (click)="UpdateOrSave(element)">
                 <mat-icon>save</mat-icon>
+                <mat-icon *ngIf="loading">
+                    <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                </mat-icon>
+            </button>
+            <button [disabled]="loading || Permission!='rwd' || !element.Action" matTooltip="save" mat-raised-button
+                color="accent" (click)="openDialog(element)">
+                <mat-icon>delete</mat-icon>
                 <mat-icon *ngIf="loading">
                     <mat-spinner diameter="20" color="Blue"></mat-spinner>
                 </mat-icon>
