--- a/src/app/modules/attendance/studentattendance/studentattendance.component.html
+++ b/src/app/modules/attendance/studentattendance/studentattendance.component.html
@@ -2,40 +2,49 @@
 <!-- <alert></alert> -->
 <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <form [formGroup]="searchForm">
-    <mat-form-field appearance="outline">
-        <mat-label>Class</mat-label>
-        <mat-select formControlName="searchClassId" (selectionChange)="bindClassSubject()">
-            <mat-option *ngFor="let item of Classes" [value]="item.ClassId">{{item.ClassName}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-        <mat-label>Section</mat-label>
-        <mat-select formControlName="searchSectionId">
-            <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">{{item.MasterDataName}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-        <mat-label>Subject</mat-label>
-        <mat-select formControlName="searchClassSubjectId">
-            <mat-option>--select--</mat-option>
-            <mat-option *ngFor="let item of FilteredClassSubjects" [value]="item.ClassSubjectId">{{item.ClassSubject}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-        <mat-label>Attendance Date</mat-label>
-        <input formControlName="searchAttendanceDate" matInput [matDatepicker]="AttendanceDate" autocomplete="off">
-        <mat-datepicker-toggle matSuffix [for]="AttendanceDate"></mat-datepicker-toggle>
-        <mat-datepicker #AttendanceDate></mat-datepicker>
-    </mat-form-field>
-    <button [disabled]="loading" (click)="GetStudentAttendance()" mat-raised-button color="accent">
-        <mat-icon>search</mat-icon>
-        <mat-icon *ngIf="loading">
-            <mat-spinner diameter="20" color="Blue"></mat-spinner>
-        </mat-icon>
-    </button>
+    <div style="display:flex;justify-content: space-between;">
+        <div>
+            <mat-form-field appearance="outline">
+                <mat-label>Class</mat-label>
+                <mat-select formControlName="searchClassId" (selectionChange)="bindClassSubject()">
+                    <mat-option *ngFor="let item of Classes" [value]="item.ClassId">{{item.ClassName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="outline" [style.width.px]="100">
+                <mat-label>Section</mat-label>
+                <mat-select formControlName="searchSectionId">
+                    <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">{{item.MasterDataName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="outline" [style.width.px]="130">
+                <mat-label>Attendance Date</mat-label>
+                <input formControlName="searchAttendanceDate" matInput [matDatepicker]="AttendanceDate"
+                    autocomplete="off">
+                <mat-datepicker-toggle matSuffix [for]="AttendanceDate"></mat-datepicker-toggle>
+                <mat-datepicker #AttendanceDate></mat-datepicker>
+            </mat-form-field>
+            <button [disabled]="loading" (click)="GetStudentAttendance()" mat-raised-button color="accent">
+                <mat-icon>search</mat-icon>
+                <mat-icon *ngIf="loading">
+                    <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                </mat-icon>
+            </button>
+        </div>
+        <div style="display:flex;flex-direction:column;padding:10px 10px 0px 10px; border:1px solid lightgray">
+            <b>Only for subject wise attendance.</b>
+            <mat-form-field appearance="outline">
+                <mat-label>Subject</mat-label>
+                <mat-select formControlName="searchClassSubjectId">
+                    <mat-option>--select--</mat-option>
+                    <mat-option *ngFor="let item of FilteredClassSubjects"
+                        [value]="item.ClassSubjectId">{{item.ClassSubject}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+    </div>
 </form>
 <mat-table #table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="StudentRollNo">
@@ -68,8 +77,8 @@
     </ng-container>
     <ng-container matColumnDef="Action">
         <mat-header-cell *matHeaderCellDef>
-            <button [disabled]="loading || !EnableSave || Permission=='read'"
-                *ngIf="StudentAttendanceList.length>0" matTooltip="save all" mat-mini-fab (click)="saveall()">
+            <button [disabled]="loading || !EnableSave || Permission=='read'" *ngIf="StudentAttendanceList.length>0"
+                matTooltip="save all" mat-mini-fab (click)="saveall()">
                 <mat-icon>all_out</mat-icon>
                 <mat-icon *ngIf="loading">
                     <mat-spinner diameter="20" color="Blue"></mat-spinner>
