--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -25,7 +25,7 @@
                 </mat-form-field>
                 <mat-form-field appearance="outline" style="width: 200px;">
                     <mat-label>Section</mat-label>
-                    <mat-select formControlName="searchSectionId">
+                    <mat-select formControlName="searchSectionId" (selectionChange)="SelectStudent()">
                         <mat-option value="0">select</mat-option>
                         <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
                             {{item.MasterDataName}}
@@ -52,7 +52,7 @@
                 </mat-form-field>
             </div>
             <div>
-                <mat-form-field appearance="outline">
+                <!-- <mat-form-field appearance="outline">
                     <mat-label>Father</mat-label>
                     <input type="text" matInput formControlName="FatherName" [matAutocomplete]="autoF">
                     <mat-autocomplete #autoF="matAutocomplete" [displayWith]="displayFnF">
@@ -69,7 +69,7 @@
                             {{option.MotherName}}
                         </mat-option>
                     </mat-autocomplete>
-                </mat-form-field>
+                </mat-form-field> -->
                 <!-- <mat-form-field appearance="outline" style="width: 150px;">
                     <mat-label>Admission No.</mat-label>
                     <input formControlName="searchAdmissionNo" autocomplete="Off" matInput [maxlength]="10">
@@ -80,7 +80,7 @@
                     <mat-label>Student</mat-label>
                     <input type="text" matInput formControlName="searchStudentName" [matAutocomplete]="auto">
                     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-                        <mat-option *ngFor="let option of filteredStudents | async" [value]="option">
+                        <mat-option *ngFor="let option of StudentOfClass" [value]="option">
                             {{option.Name}}
                         </mat-option>
                     </mat-autocomplete>
