--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -17,7 +17,6 @@
                 <mat-form-field appearance="outline" style="width: 200px;">
                     <mat-label>Class</mat-label>
                     <mat-select formControlName="searchClassId" (selectionChange)="ClearData()">
-                        <mat-option value="0">No class</mat-option>
                         <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
                             {{item.ClassName}}
                         </mat-option>
@@ -80,7 +79,7 @@
                     <mat-label>Student</mat-label>
                     <input type="text" matInput formControlName="searchStudentName" [matAutocomplete]="auto">
                     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-                        <mat-option *ngFor="let option of StudentOfClass" [value]="option">
+                        <mat-option *ngFor="let option of filteredStudents|async" [value]="option">
                             {{option.Name}}
                         </mat-option>
                     </mat-autocomplete>
