--- a/src/app/modules/attendance/absentlist/absentlist.component.html
+++ b/src/app/modules/attendance/absentlist/absentlist.component.html
@@ -72,11 +72,11 @@
             {{element.ClassSubject}}
         </mat-cell>
     </ng-container>
-    <ng-container matColumnDef="ContactNo">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>ContactNo
+    <ng-container matColumnDef="PersonalNo">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Personal No
         </mat-header-cell>
         <mat-cell *matCellDef="let element">
-            {{element.ContactNo}}
+            {{element.PersonalNo}}
         </mat-cell>
     </ng-container>
     <ng-container matColumnDef="ReportedTo">
