--- a/src/app/modules/attendance/absentlist/absentlist.component.scss
+++ b/src/app/modules/attendance/absentlist/absentlist.component.scss
@@ -34,7 +34,7 @@ mat-header-cell {
 .mat-column-AttendanceDate,
 .mat-column-ApprovedByName,
 .mat-column-StudentRollNo,
-.mat-column-ContactNo,
+.mat-column-PersonalNo,
 .mat-column-Remarks,
 .mat-column-ReportedTo {
     flex: 1 1 120px;
