--- a/src/app/modules/attendance/defaulter/defaulter.component.scss
+++ b/src/app/modules/attendance/defaulter/defaulter.component.scss
@@ -21,7 +21,7 @@ mat-cell,mat-header-cell{
     flex:1 1 80px;
     justify-content: center;
 }
-.mat-column-ReportedTo,.mat-column-ContactNo,.mat-column-ClassName{
+.mat-column-ReportedTo,.mat-column-PersonalNo,.mat-column-ClassName{
     flex:1 1 120px;
 }
 .mat-column-StudentRollNo{
