--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
@@ -6,7 +6,7 @@
     <div>
         <mat-form-field appearance="outline" style="width: 150px;">
             <mat-label>Class</mat-label>
-            <mat-select formControlName="searchClassId">
+            <mat-select formControlName="searchClassId" (selectionChange)="SetLabel()">
                 <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
                     {{item.ClassName}}
                 </mat-option>
@@ -43,14 +43,23 @@
                 <mat-spinner diameter="20" color="Blue"></mat-spinner>
             </mat-icon>
         </button>
-        <button [disabled]="loading" style="margin-right: 10px;" matTooltip="Data from previous batch & previous class"
-            class="mat-raised-button" (click)="CopyFromPreviousClassAndBatch()">
-            <mat-icon>arrow_back_ios</mat-icon>
-        </button>
-        <button [disabled]="loading" matTooltip="Data from previous batch & same class" class="mat-raised-button"
-            (click)="CopyFromSameClassPreviousBatch()">
-            <mat-icon>skip_previous</mat-icon>
-        </button>
+        <div style="display:flex">
+            <div style="margin-right:15px;padding:15px;border:1px solid lawngreen"
+                *ngIf="PreviousClassPreviousBatchLabel.length>0">
+                <span style="margin-right: 15px;">{{PreviousClassPreviousBatchLabel}}&nbsp;</span>
+                <button [disabled]="loading" style="margin-right: 10px;" class="mat-raised-button"
+                    (click)="CopyFromPreviousClassAndBatch()">
+                    <mat-icon>arrow_back_ios</mat-icon>
+                </button>
+            </div>
+            <div style="padding:15px;border:1px solid lawngreen"
+                *ngIf="SameClassPreviousBatchLabel.length>0">
+                <span style="margin-right: 15px;">{{SameClassPreviousBatchLabel}}&nbsp;</span>
+                <button [disabled]="loading" class="mat-raised-button" (click)="CopyFromSameClassPreviousBatch()">
+                    <mat-icon>skip_previous</mat-icon>
+                </button>
+            </div>
+        </div>
     </div>
     <mat-divider style="position:relative; margin-top:10px;margin-bottom: 15px;"></mat-divider>
     <div *ngIf="StudentClassList.length>0" style="padding-top:10px;border:1px solid lightgray">
@@ -75,9 +84,9 @@
         </button>
     </div>
 </form>
-<div style="font-size: medium;padding: 15px 0px 15px 0px;font-weight: bold;">{{ HeaderTitle }}</div>
+<div style="font-size: medium;padding: 15px 0px 15px 0px;font-weight: bold;color:darkgreen">{{ HeaderTitle }}</div>
 <mat-table #table [dataSource]="dataSource" matSort>
-    <ng-container matColumnDef="AdmissionNo">
+    <!-- <ng-container matColumnDef="AdmissionNo">
         <mat-header-cell *matHeaderCellDef mat-sort-header style="display:flex ;">
             <span style="display: flex;flex-direction: column;justify-content: flex-start;">
                 <span style="justify-content: flex-start;display: flex;">Admission No.</span>
@@ -90,7 +99,7 @@
         <mat-cell *matCellDef="let element">
             {{element.AdmissionNo}}
         </mat-cell>
-    </ng-container>
+    </ng-container> -->
     <ng-container matColumnDef="StudentName">
         <mat-header-cell *matHeaderCellDef mat-sort-header>
             <span style="display: flex;flex-direction: column;justify-content: start;">
@@ -111,10 +120,32 @@
             {{element.GenderName}}
         </mat-cell>
     </ng-container>
-    <ng-container matColumnDef="ClassName">
+    <ng-container matColumnDef="AdmissionNo">
+        <mat-header-cell *matHeaderCellDef mat-sort-header style="display:flex ;">
+            <span style="display: flex;flex-direction: column;justify-content: flex-start;">
+                <span style="justify-content: flex-start;display: flex;">Admission No.</span>
+                <mat-form-field style="width: 80px;">
+                    <mat-label>Admission No.</mat-label>
+                    <input matInput [formControl]="IdFilter" autocomplete="Off">
+                </mat-form-field>
+            </span>
+        </mat-header-cell>
+        <mat-cell *matCellDef="let element">
+            <mat-form-field>
+                <input matInput (blur)="onBlur(element)" [value]="element.AdmissionNo" [(ngModel)]="element.AdmissionNo"
+                    autocomplete="Off" [maxlength]="10">
+            </mat-form-field>
+        </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="ClassId">
         <mat-header-cell *matHeaderCellDef mat-sort-header> Class </mat-header-cell>
         <mat-cell *matCellDef="let element">
-            {{element.ClassName}}
+            <mat-form-field>
+                <mat-select (selectionChange)="onBlur(element)" [value]="element.ClassId" [(ngModel)]="element.ClassId">
+                    <mat-option *ngFor="let item of Classes" [value]="item.ClassId">{{item.ClassName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
         </mat-cell>
     </ng-container>
     <ng-container matColumnDef="RollNo">
@@ -190,13 +221,13 @@
     </ng-container>
     <ng-container matColumnDef="Action">
         <mat-header-cell *matHeaderCellDef>
-            <button [disabled]="loading || StudentClassList.length==0 || Permission=='read'" matTooltip="save all"
+            <!-- <button [disabled]="loading || StudentClassList.length==0 || Permission=='read'" matTooltip="save all"
                 mat-mini-fab (click)="SaveAll()">
                 <mat-icon>all_out</mat-icon>
                 <mat-icon *ngIf="loading">
                     <mat-spinner diameter="20" color="Blue"></mat-spinner>
                 </mat-icon>
-            </button>
+            </button> -->
         </mat-header-cell>
         <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
             <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="save" mat-raised-button
