--- a/src/app/modules/ClassSubject/classsubjectdetail/classsubjectdetail.component.html
+++ b/src/app/modules/ClassSubject/classsubjectdetail/classsubjectdetail.component.html
@@ -101,16 +101,16 @@
             <ng-container matColumnDef="Confidential">
                 <mat-header-cell *matHeaderCellDef mat-sort-header> Confidential </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    <mat-checkbox (click)="$event.stopPropagation()"
-                        (change)="updateConfidential(element,$event)" [checked]="element.Confidential">
+                    <mat-checkbox (click)="$event.stopPropagation()" (change)="updateConfidential(element,$event)"
+                        [checked]="element.Confidential">
                     </mat-checkbox>
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="Active">
                 <mat-header-cell *matHeaderCellDef mat-sort-header> Active </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    <mat-checkbox (click)="$event.stopPropagation()"
-                        (change)="updateActive(element,$event)" [checked]="element.Active==1?true:false">
+                    <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
+                        [checked]="element.Active==1?true:false">
                     </mat-checkbox>
                 </mat-cell>
             </ng-container>
@@ -132,7 +132,13 @@
                             <mat-spinner diameter="20" color="Blue"></mat-spinner>
                         </mat-icon>
                     </button>
-
+                    <button [disabled]="loading || !element.Action || Permission!='rwd' || element.ClassSubjectId==0" matTooltip="delete"
+                        mat-raised-button color="accent" (click)="Delete(element)">
+                        <mat-icon>delete</mat-icon>
+                        <mat-icon *ngIf="loading">
+                            <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                        </mat-icon>
+                    </button>
                 </mat-cell>
             </ng-container>
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
