--- a/src/app/modules/EmpAttendance/employeeattendance/employeeattendance.component.html
+++ b/src/app/modules/EmpAttendance/employeeattendance/employeeattendance.component.html
@@ -1,37 +1,44 @@
-<!-- <div></div> -->
 <div style="padding: 15px;"><strong>Employee Attendance</strong></div>
 <!-- <alert></alert> -->
 <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <form [formGroup]="searchForm">
-    <mat-form-field appearance="outline">
-        <mat-label>Attendance Date</mat-label>
-        <input formControlName="searchAttendanceDate" matInput [matDatepicker]="AttendanceDate" autocomplete="off">
-        <mat-datepicker-toggle matSuffix [for]="AttendanceDate"></mat-datepicker-toggle>
-        <mat-datepicker #AttendanceDate></mat-datepicker>
-    </mat-form-field>
-    <button [disabled]="loading" (click)="GetEmployeeAttendance()" class="mat-raised-button">
-        <mat-icon>search</mat-icon>
-        <mat-icon *ngIf="loading">
-            <mat-spinner diameter="20" color="Blue"></mat-spinner>
-        </mat-icon>
-    </button>
+    <div style="display:flex;justify-content: space-between;">
+        <div>
+            <mat-form-field appearance="outline" [style.width.px]="130">
+                <mat-label>Attendance Date</mat-label>
+                <input formControlName="searchAttendanceDate" matInput [matDatepicker]="AttendanceDate"
+                    autocomplete="off">
+                <mat-datepicker-toggle matSuffix [for]="AttendanceDate"></mat-datepicker-toggle>
+                <mat-datepicker #AttendanceDate></mat-datepicker>
+            </mat-form-field>
+            <button [disabled]="loading" (click)="GetEmployeeAttendance()" mat-raised-button color="accent">
+                <mat-icon>search</mat-icon>
+                <mat-icon *ngIf="loading">
+                    <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                </mat-icon>
+            </button>
+        </div>
+        
+    </div>
 </form>
 <mat-table #table [dataSource]="dataSource" matSort>
-    <ng-container matColumnDef="TeacherName">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Teacher
+    <ng-container matColumnDef="Employee">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Employee
         </mat-header-cell>
         <mat-cell *matCellDef="let element">
-            {{element.TeacherName}}
+            {{element.Employee}}
         </mat-cell>
     </ng-container>
     <ng-container matColumnDef="AttendanceStatus">
         <mat-header-cell *matHeaderCellDef mat-sort-header> Present&nbsp;
-            <mat-checkbox *ngIf="TeacherAttendanceList.length>0" matTooltip="check/uncheck all" mat-mini-fab
+            <mat-checkbox *ngIf="EmployeeAttendanceList.length>0" matTooltip="check/uncheck all" mat-mini-fab
                 (click)="$event.stopPropagation()" (change)="checkall($event)">
             </mat-checkbox>
         </mat-header-cell>
         <mat-cell *matCellDef="let element">
-            <mat-checkbox (click)="$event.stopPropagation()" (change)="UpdateActive(element,$event)"
+            <mat-checkbox 
+                (click)="$event.stopPropagation()" 
+                (change)="UpdateActive(element,$event)"
                 [checked]="element.AttendanceStatus==1?true:false">
             </mat-checkbox>
         </mat-cell>
@@ -47,7 +54,7 @@
     </ng-container>
     <ng-container matColumnDef="Action">
         <mat-header-cell *matHeaderCellDef>
-            <button [disabled]="loading || !EnableSave || Permission=='read'" *ngIf="TeacherAttendanceList.length>0"
+            <button [disabled]="loading || !EnableSave || Permission=='read'" *ngIf="EmployeeAttendanceList.length>0"
                 matTooltip="save all" mat-mini-fab (click)="saveall()">
                 <mat-icon>all_out</mat-icon>
                 <mat-icon *ngIf="loading">
@@ -56,8 +63,8 @@
             </button>
         </mat-header-cell>
         <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-            <button [disabled]="loading || !element.Action || !EnableSave || Permission=='read'" matTooltip="save"
-                mat-raised-button color="accent" (click)="UpdateOrSave(element,0)">
+            <button [disabled]="loading || !element.Action || Permission=='read' || !EnableSave" matTooltip="view/edit"
+                mat-raised-button color="accent" (click)="SaveRow(element)">
                 <mat-icon>save</mat-icon>
                 <mat-icon *ngIf="loading">
                     <mat-spinner diameter="20" color="Blue"></mat-spinner>
@@ -68,4 +75,4 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
 </mat-table>
-<mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,20,50,100]"></mat-paginator>
+<mat-paginator style="display:flex;justify-content: center;" [pageSizeOptions]="[10,20,50,75]"></mat-paginator>
