--- a/src/app/modules/EmpAttendance/employeeattendance/employeeattendance.component.scss
+++ b/src/app/modules/EmpAttendance/employeeattendance/employeeattendance.component.scss
@@ -9,9 +9,8 @@ mat-form-field,button{
 mat-cell:first-of-type{
     padding-left: 0px;
 }
-.mat-column-TeacherName,.mat-column-Remarks{
-    flex:1 0 150px;
-}
 .mat-column-AttendanceStatus,.mat-column-Action{
-    flex:1 0 100px;
+    justify-content: center;
+    flex:1 1 100px;
+    min-width: 80px;
 }
