--- a/src/app/modules/globaladmininitial/organizationpayment/organizationpayment.component.html
+++ b/src/app/modules/globaladmininitial/organizationpayment/organizationpayment.component.html
@@ -11,19 +11,19 @@
                     <mat-form-field appearance="outline">
                         <mat-label>Customer</mat-label>
                         <mat-select formControlName="searchCustomerId">
-                            <mat-option [value]="0" >select</mat-option>
+                            <mat-option [value]="0">select</mat-option>
                             <mat-option *ngFor="let item of Organizations" [value]="item.OrganizationId">
                                 {{item.OrganizationName}}
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-                   
+
                     <button [disabled]="loading" matTooltip="search" class="mat-raised-button"
                         (click)="GetOrganizationPayment()">
-                         <mat-icon>search</mat-icon>
-                            <mat-icon *ngIf="loading">
-                                <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                            </mat-icon>
+                        <mat-icon>search</mat-icon>
+                        <mat-icon *ngIf="loading">
+                            <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                        </mat-icon>
                     </button>
                 </div>
             </form>
@@ -46,14 +46,14 @@
                     <mat-header-cell *matHeaderCellDef>Payment Date
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                       {{element.PaymentDate|date:'dd/MM/yyyy'}}
+                        {{element.PaymentDate|date:'dd/MM/yyyy'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="AmountPerMonth">
                     <mat-header-cell *matHeaderCellDef>Amount Per Month
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                       {{element.AmountPerMonth}}
+                        {{element.AmountPerMonth}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="PaidMonths">
@@ -61,10 +61,8 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="outline">
-                            <input type="number"
-                            (blur)="onBlur(element)"
-                            [(ngModel)]="element.PaidMonths" [value]="element.PaidMonths" matInput
-                                autocomplete="off" [max]="72">                          
+                            <input type="number" (blur)="onBlur(element)" [(ngModel)]="element.PaidMonths"
+                                [value]="element.PaidMonths" matInput autocomplete="off" [max]="72">
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
@@ -74,20 +72,20 @@
                     <mat-cell *matCellDef="let element">
                         {{element.Amount}}
                     </mat-cell>
-                </ng-container> 
+                </ng-container>
                 <ng-container matColumnDef="PaymentMode">
                     <mat-header-cell *matHeaderCellDef>Payment Mode
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="outline">
                             <mat-label>payment mode</mat-label>
-                            <mat-select [value]="element.PaymentMode"
-                                [(ngModel)]="element.PaymentMode">
-                                <mat-option *ngFor="let item of PaymentModes" [value]="item.MasterDataId">{{item.MasterDataName}}</mat-option>
+                            <mat-select [value]="element.PaymentMode" [(ngModel)]="element.PaymentMode">
+                                <mat-option *ngFor="let item of PaymentModes"
+                                    [value]="item.MasterDataId">{{item.MasterDataName}}</mat-option>
                             </mat-select>
-                        </mat-form-field>                        
+                        </mat-form-field>
                     </mat-cell>
-                </ng-container>                
+                </ng-container>
                 <!-- <ng-container matColumnDef="Active">
                     <mat-header-cell *matHeaderCellDef style="justify-content: center;"> Active </mat-header-cell>
                     <mat-cell *matCellDef="let element" style="justify-content: center;">
@@ -98,14 +96,15 @@
                 </ng-container> -->
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef>
-                        <button [disabled]="loading || Permission=='read'" matTooltip="add new" mat-mini-fab (click)="AddNew()">
+                        <button [disabled]="loading || Permission=='read'" matTooltip="add new" mat-mini-fab
+                            (click)="AddNew()">
                             <mat-icon>add</mat-icon>
                         </button>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading || !element.Action" matTooltip="save" 
-mat-raised-button color="accent" (click)="UpdateOrSave(element)">
-                             <mat-icon>save</mat-icon>
+                        <button [disabled]="loading || !element.Action" matTooltip="save" mat-raised-button
+                            color="accent" (click)="UpdateOrSave(element)">
+                            <mat-icon>save</mat-icon>
                             <mat-icon *ngIf="loading">
                                 <mat-spinner diameter="20" color="Blue"></mat-spinner>
                             </mat-icon>
@@ -115,7 +114,8 @@ mat-raised-button color="accent" (click)="UpdateOrSave(element)">
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
             </mat-table>
-            <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,20,30]"></mat-paginator>
+            <mat-paginator style="display: flex;justify-content: center;"
+                [pageSizeOptions]="[10,20,30]"></mat-paginator>
         </div>
         <div style="width:100%; display: flex;align-items: center; justify-content: center;padding: 15px 15px 15px 0px">
             <button [disabled]="loading" class="mat-raised-button" matTooltip="login" (click)="login()">
